<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/info">
        <item
            android:id="@+id/info_title"
            android:checkable="false"
            android:title="@string/info" />
        <item
            android:id="@+id/zhihu"
            android:checkable="true"
            android:checked="true"
            android:icon="@mipmap/ic_drawer_zhihu"
            android:title="@string/zhihu" />
        <item
            android:id="@+id/wechat"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_wechat"
            android:title="@string/wechat" />
        <item
            android:id="@+id/gank"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gank"
            android:title="@string/gank" />
        <item
            android:id="@+id/gold"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gold"
            android:title="@string/gold" />
        <item
            android:id="@+id/V2EX"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_vtex"
            android:title="@string/V2EX" />
    </group>
    <group android:id="@+id/options">
        <item
            android:id="@+id/option_title"
            android:checkable="false"
            android:title="@string/options" />
        <item
            android:id="@+id/collect"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_like"
            android:title="@string/collect" />
        <item
            android:id="@+id/setting"
            android:checkable="true"
            android:icon="@mipmap/icon_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/about"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_about"
            android:title="@string/about" />
    </group>

</menu>